--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/postcss": "^4.1.17",
     "framer-motion": "^12.23.24",
-    "next": "16.0.5",
+    "next": "^15.0.5",
     "postcss": "^8.5.6",
     "react": "19.2.0",
     "react-dom": "19.2.0",
